TPI/obj/tp4.output
Rules useless in parser due to conflicts

    3 line: /* vacío */

   17 saltoOpcional: '\n'

   44 sentenciaSwitch: /* vacío */

   49 sentenciaReturn: /* vacío */

   68 parametro: TIPO_DATO IDENTIFICADOR


Estado 1 conflictos: 10 desplazamiento/reducción, 10 reducción/reducción
Estado 3 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 13 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 14 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 15 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 16 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 17 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 18 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 19 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 20 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 22 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 1 desplazamiento/reducción, 21 reducción/reducción
Estado 25 conflictos: 10 reducción(ones)/reducción(ones)
Estado 31 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 35 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 45 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 53 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 76 conflictos: 20 reducción(ones)/reducción(ones)
Estado 81 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 83 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 85 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 86 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 87 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 88 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 89 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 90 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 91 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 92 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 93 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 103 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 130 conflictos: 13 reducción(ones)/reducción(ones)
Estado 153 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 155 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 156 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 157 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 158 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 159 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 160 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 161 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 162 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 163 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 164 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 182 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 191 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 200 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 214 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 216 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 217 conflictos: 10 desplazamiento/reducción, 12 reducción/reducción
Estado 233 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: /* vacío */
    4     | '\n'
    5     | listadoDeSentenciasDeDeclaracion saltoOpcional
    6     | definicionFuncion saltoOpcional
    7     | sentenciaSwitch saltoOpcional
    8     | sentenciaWhile saltoOpcional
    9     | sentenciaFor saltoOpcional
   10     | sentenciaDoWhile saltoOpcional
   11     | sentenciaIfElse saltoOpcional
   12     | sentenciaAsignacion saltoOpcional
   13     | incrementoDecremento saltoOpcional
   14     | error saltoOpcional

   15 saltoOpcional: /* vacío */
   16              | '\n' saltoOpcional
   17              | '\n'

   18 definicionFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametros ')' saltoOpcional '{' listadoDeSentencias '}' ';'

   19 listadoDeSentencias: /* vacío */
   20                    | sentenciaSwitch listadoDeSentencias
   21                    | sentenciaDoWhile listadoDeSentencias
   22                    | sentenciaFor listadoDeSentencias
   23                    | sentenciaWhile listadoDeSentencias
   24                    | sentenciaIfElse listadoDeSentencias
   25                    | sentenciaAsignacion listadoDeSentencias
   26                    | sentenciaReturn listadoDeSentencias
   27                    | listadoDeSentenciasDeDeclaracion listadoDeSentencias
   28                    | incrementoDecremento listadoDeSentencias
   29                    | '\n' listadoDeSentencias

   30 sentenciaDoWhile: DO '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

   31 sentenciaFor: FOR '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

   32 sentenciaDecOAsig: sentenciaAsignacion
   33                  | sentenciaDeclaracion

   34 incrementoParaFor: IDENTIFICADOR MAS_MAS
   35                  | IDENTIFICADOR MENOS_MENOS

   36 incrementoDecremento: IDENTIFICADOR MAS_MAS ';'
   37                     | IDENTIFICADOR MENOS_MENOS ';'

   38 $@1: /* vacío */

   39 sentenciaIfElse: IF '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse
   40                | error saltoOpcional

   41 sentenciaElse: /* vacío */
   42              | ELSE saltoOpcional '{' listadoDeSentencias '}'

   43 sentenciaWhile: WHILE '(' exp ')' saltoOpcional '{' listadoDeSentencias '}'

   44 sentenciaSwitch: /* vacío */
   45                | SWITCH '(' exp ')' saltoOpcional '{' sentenciaCase '}'

   46 sentenciaCase: /* vacío */
   47              | CASE exp ':' listadoDeSentencias BREAK ';'
   48              | sentenciaCase DEFAULT ':' listadoDeSentencias

   49 sentenciaReturn: /* vacío */
   50                | RETURN exp ';'

   51 listadoDeSentenciasDeDeclaracion: /* vacío */
   52                                 | sentenciaDeclaracion
   53                                 | sentenciaDeclaracion ';' listadoDeSentenciasDeDeclaracion

   54 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR ';'
   55                     | TIPO_DATO listaIdentificadores
   56                     | TIPO_DATO IDENTIFICADOR '[' expC ']' ';'
   57                     | TIPO_DATO IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   58                     | TIPO_DATO '*' IDENTIFICADOR ';'
   59                     | TIPO_DATO IDENTIFICADOR '(' listaParametros ')' ';'
   60                     | error saltoOpcional

   61 auxi: expC ',' auxi
   62     | expC

   63 sentenciaAsignacion: parametro '=' exp ';'
   64                    | parametro MAS_IGUAL exp ';'
   65                    | parametro MENOS_IGUAL exp ';'
   66                    | parametro POR_IGUAL exp ';'
   67                    | parametro DIVIDIDO_IGUAL exp ';'

   68 parametro: TIPO_DATO IDENTIFICADOR
   69          | IDENTIFICADOR

   70 listaIdentificadores: identificadorA
   71                     | listaIdentificadores ',' identificadorA

   72 identificadorA: IDENTIFICADOR ';'
   73               | IDENTIFICADOR '=' exp ';'
   74               | IDENTIFICADOR MAS_IGUAL exp ';'
   75               | IDENTIFICADOR MENOS_IGUAL exp ';'
   76               | IDENTIFICADOR POR_IGUAL exp ';'
   77               | IDENTIFICADOR DIVIDIDO_IGUAL exp ';'

   78 listaParametros: TIPO_DATO
   79                | TIPO_DATO ',' listaParametros
   80                | TIPO_DATO IDENTIFICADOR
   81                | TIPO_DATO IDENTIFICADOR ',' listaParametros

   82 exp: LITERAL_CADENA
   83    | expC

   84 expC: IDENTIFICADOR
   85     | CHAR
   86     | expC '-' expC
   87     | expC '>' expC
   88     | expC '<' expC
   89     | expC IGUALDAD expC
   90     | expC MAYOR_IGUAL expC
   91     | expC MENOR_IGUAL expC
   92     | expC DESIGUALDAD expC
   93     | expC AND expC
   94     | expC OR expC
   95     | DECIMAL
   96     | HEXA
   97     | OCTAL
   98     | NUM_R
   99     | expC '*' expC
  100     | expC '/' expC
  101     | expC '+' expC


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 4 16 17 29
'(' (40) 18 30 31 39 43 45 59
')' (41) 18 30 31 39 43 45 59
'*' (42) 58 99
'+' (43) 101
',' (44) 61 71 79 81
'-' (45) 86
'/' (47) 100
':' (58) 47 48
';' (59) 18 30 31 36 37 47 50 53 54 56 57 58 59 63 64 65 66 67 72 73
    74 75 76 77
'<' (60) 88
'=' (61) 57 63 73
'>' (62) 87
'[' (91) 56 57
']' (93) 56 57
'{' (123) 18 30 31 39 42 43 45 57
'}' (125) 18 30 31 39 42 43 45 57
error (256) 14 40 60
FOR (258) 31
IF (259) 39
ELSE (260) 42
RETURN (261) 50
SWITCH (262) 45
DECIMAL (263) 95
HEXA (264) 96
OCTAL (265) 97
NUM_R (266) 98
IDENTIFICADOR (267) 18 34 35 36 37 54 56 57 58 59 68 69 72 73 74 75
    76 77 80 81 84
TIPO_DATO (268) 18 54 55 56 57 58 59 68 78 79 80 81
DO (269) 30
WHILE (270) 30 43
CHAR (271) 85
LITERAL_CADENA (272) 82
MAYOR_IGUAL (273) 90
MENOR_IGUAL (274) 91
IGUALDAD (275) 89
AND (276) 93
OR (277) 94
DESIGUALDAD (278) 92
CASE (279) 47
BREAK (280) 47
DEFAULT (281) 48
MAS_IGUAL (282) 64 74
MENOS_IGUAL (283) 65 75
POR_IGUAL (284) 66 76
DIVIDIDO_IGUAL (285) 67 77
MAS_MAS (286) 34 36
MENOS_MENOS (287) 35 37


No terminales con las reglas donde aparecen

$accept (50)
    en la izquierda: 0
input (51)
    en la izquierda: 1 2, en la derecha: 0 2
line (52)
    en la izquierda: 3 4 5 6 7 8 9 10 11 12 13 14, en la derecha: 2
saltoOpcional (53)
    en la izquierda: 15 16 17, en la derecha: 5 6 7 8 9 10 11 12 13
    14 16 18 31 39 40 42 43 45 60
definicionFuncion (54)
    en la izquierda: 18, en la derecha: 6
listadoDeSentencias (55)
    en la izquierda: 19 20 21 22 23 24 25 26 27 28 29, en la derecha:
    18 20 21 22 23 24 25 26 27 28 29 30 31 39 42 43 47 48
sentenciaDoWhile (56)
    en la izquierda: 30, en la derecha: 10 21
sentenciaFor (57)
    en la izquierda: 31, en la derecha: 9 22
sentenciaDecOAsig (58)
    en la izquierda: 32 33, en la derecha: 31
incrementoParaFor (59)
    en la izquierda: 34 35, en la derecha: 31
incrementoDecremento (60)
    en la izquierda: 36 37, en la derecha: 13 28
sentenciaIfElse (61)
    en la izquierda: 39 40, en la derecha: 11 24
$@1 (62)
    en la izquierda: 38, en la derecha: 39
sentenciaElse (63)
    en la izquierda: 41 42, en la derecha: 39
sentenciaWhile (64)
    en la izquierda: 43, en la derecha: 8 23
sentenciaSwitch (65)
    en la izquierda: 44 45, en la derecha: 7 20
sentenciaCase (66)
    en la izquierda: 46 47 48, en la derecha: 45 48
sentenciaReturn (67)
    en la izquierda: 49 50, en la derecha: 26
listadoDeSentenciasDeDeclaracion (68)
    en la izquierda: 51 52 53, en la derecha: 5 27 53
sentenciaDeclaracion (69)
    en la izquierda: 54 55 56 57 58 59 60, en la derecha: 33 52 53
auxi (70)
    en la izquierda: 61 62, en la derecha: 57 61
sentenciaAsignacion (71)
    en la izquierda: 63 64 65 66 67, en la derecha: 12 25 32
parametro (72)
    en la izquierda: 68 69, en la derecha: 63 64 65 66 67
listaIdentificadores (73)
    en la izquierda: 70 71, en la derecha: 55 71
identificadorA (74)
    en la izquierda: 72 73 74 75 76 77, en la derecha: 70 71
listaParametros (75)
    en la izquierda: 78 79 80 81, en la derecha: 18 59 79 81
exp (76)
    en la izquierda: 82 83, en la derecha: 30 39 43 45 47 50 63 64
    65 66 67 73 74 75 76 77
expC (77)
    en la izquierda: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101, en la derecha: 31 56 57 61 62 83 86 87 88 89 90 91 92
    93 94 99 100 101


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    FOR            desplazar e ir al estado 4
    IF             desplazar e ir al estado 5
    SWITCH         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 8
    DO             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    '\n'           desplazar e ir al estado 11

    $end           [reduce usando la regla 3 (line)]
    $end           [reduce usando la regla 44 (sentenciaSwitch)]
    $end           [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    error          [reduce usando la regla 3 (line)]
    error          [reduce usando la regla 44 (sentenciaSwitch)]
    error          [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    FOR            [reduce usando la regla 3 (line)]
    FOR            [reduce usando la regla 44 (sentenciaSwitch)]
    FOR            [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    IF             [reduce usando la regla 3 (line)]
    IF             [reduce usando la regla 44 (sentenciaSwitch)]
    IF             [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    SWITCH         [reduce usando la regla 3 (line)]
    SWITCH         [reduce usando la regla 44 (sentenciaSwitch)]
    SWITCH         [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    IDENTIFICADOR  [reduce usando la regla 3 (line)]
    IDENTIFICADOR  [reduce usando la regla 44 (sentenciaSwitch)]
    IDENTIFICADOR  [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    TIPO_DATO      [reduce usando la regla 3 (line)]
    TIPO_DATO      [reduce usando la regla 44 (sentenciaSwitch)]
    TIPO_DATO      [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    DO             [reduce usando la regla 3 (line)]
    DO             [reduce usando la regla 44 (sentenciaSwitch)]
    DO             [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    WHILE          [reduce usando la regla 3 (line)]
    WHILE          [reduce usando la regla 44 (sentenciaSwitch)]
    WHILE          [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]
    '\n'           [reduce usando la regla 3 (line)]
    '\n'           [reduce usando la regla 44 (sentenciaSwitch)]
    '\n'           [reduce usando la regla 51 (listadoDeSentenciasDeDeclaracion)]

    line                              ir al estado 12
    definicionFuncion                 ir al estado 13
    sentenciaDoWhile                  ir al estado 14
    sentenciaFor                      ir al estado 15
    incrementoDecremento              ir al estado 16
    sentenciaIfElse                   ir al estado 17
    sentenciaWhile                    ir al estado 18
    sentenciaSwitch                   ir al estado 19
    listadoDeSentenciasDeDeclaracion  ir al estado 20
    sentenciaDeclaracion              ir al estado 21
    sentenciaAsignacion               ir al estado 22
    parametro                         ir al estado 23


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   14 line: error . saltoOpcional
   40 sentenciaIfElse: error . saltoOpcional
   60 sentenciaDeclaracion: error . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 25


estado 4

   31 sentenciaFor: FOR . '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 26


estado 5

   39 sentenciaIfElse: IF . '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse

    '('  desplazar e ir al estado 27


estado 6

   45 sentenciaSwitch: SWITCH . '(' exp ')' saltoOpcional '{' sentenciaCase '}'

    '('  desplazar e ir al estado 28


estado 7

   36 incrementoDecremento: IDENTIFICADOR . MAS_MAS ';'
   37                     | IDENTIFICADOR . MENOS_MENOS ';'
   69 parametro: IDENTIFICADOR .

    MAS_MAS      desplazar e ir al estado 29
    MENOS_MENOS  desplazar e ir al estado 30

    $default  reduce usando la regla 69 (parametro)


estado 8

   18 definicionFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametros ')' saltoOpcional '{' listadoDeSentencias '}' ';'
   54 sentenciaDeclaracion: TIPO_DATO . IDENTIFICADOR ';'
   55                     | TIPO_DATO . listaIdentificadores
   56                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' ';'
   57                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   58                     | TIPO_DATO . '*' IDENTIFICADOR ';'
   59                     | TIPO_DATO . IDENTIFICADOR '(' listaParametros ')' ';'
   68 parametro: TIPO_DATO . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 31
    '*'            desplazar e ir al estado 32

    listaIdentificadores  ir al estado 33
    identificadorA        ir al estado 34


estado 9

   30 sentenciaDoWhile: DO . '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

    '{'  desplazar e ir al estado 35


estado 10

   43 sentenciaWhile: WHILE . '(' exp ')' saltoOpcional '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 36


estado 11

    4 line: '\n' .

    $default  reduce usando la regla 4 (line)


estado 12

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 13

    6 line: definicionFuncion . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 37


estado 14

   10 line: sentenciaDoWhile . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 38


estado 15

    9 line: sentenciaFor . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 39


estado 16

   13 line: incrementoDecremento . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 40


estado 17

   11 line: sentenciaIfElse . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 41


estado 18

    8 line: sentenciaWhile . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 42


estado 19

    7 line: sentenciaSwitch . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 43


estado 20

    5 line: listadoDeSentenciasDeDeclaracion . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 44


estado 21

   52 listadoDeSentenciasDeDeclaracion: sentenciaDeclaracion .
   53                                 | sentenciaDeclaracion . ';' listadoDeSentenciasDeDeclaracion

    ';'  desplazar e ir al estado 45

    $default  reduce usando la regla 52 (listadoDeSentenciasDeDeclaracion)


estado 22

   12 line: sentenciaAsignacion . saltoOpcional

    '\n'  desplazar e ir al estado 24

    '\n'      [reduce usando la regla 15 (saltoOpcional)]
    $default  reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 46


estado 23

   63 sentenciaAsignacion: parametro . '=' exp ';'
   64                    | parametro . MAS_IGUAL exp ';'
   65                    | parametro . MENOS_IGUAL exp ';'
   66                    | parametro . POR_IGUAL exp ';'
   67                    | parametro . DIVIDIDO_IGUAL exp ';'

    MAS_IGUAL       desplazar e ir al estado 47
    MENOS_IGUAL     desplazar e ir al estado 48
    POR_IGUAL       desplazar e ir al estado 49
    DIVIDIDO_IGUAL  desplazar e ir al estado 50
    '='             desplazar e ir al estado 51


estado 24

   16 saltoOpcional: '\n' . saltoOpcional
   17              | '\n' .

    '\n'  desplazar e ir al estado 24

    $end           reduce usando la regla 15 (saltoOpcional)
    $end           [reduce usando la regla 17 (saltoOpcional)]
    error          reduce usando la regla 15 (saltoOpcional)
    error          [reduce usando la regla 17 (saltoOpcional)]
    FOR            reduce usando la regla 15 (saltoOpcional)
    FOR            [reduce usando la regla 17 (saltoOpcional)]
    IF             reduce usando la regla 15 (saltoOpcional)
    IF             [reduce usando la regla 17 (saltoOpcional)]
    RETURN         reduce usando la regla 15 (saltoOpcional)
    RETURN         [reduce usando la regla 17 (saltoOpcional)]
    SWITCH         reduce usando la regla 15 (saltoOpcional)
    SWITCH         [reduce usando la regla 17 (saltoOpcional)]
    DECIMAL        reduce usando la regla 15 (saltoOpcional)
    DECIMAL        [reduce usando la regla 17 (saltoOpcional)]
    HEXA           reduce usando la regla 15 (saltoOpcional)
    HEXA           [reduce usando la regla 17 (saltoOpcional)]
    OCTAL          reduce usando la regla 15 (saltoOpcional)
    OCTAL          [reduce usando la regla 17 (saltoOpcional)]
    NUM_R          reduce usando la regla 15 (saltoOpcional)
    NUM_R          [reduce usando la regla 17 (saltoOpcional)]
    IDENTIFICADOR  reduce usando la regla 15 (saltoOpcional)
    IDENTIFICADOR  [reduce usando la regla 17 (saltoOpcional)]
    TIPO_DATO      reduce usando la regla 15 (saltoOpcional)
    TIPO_DATO      [reduce usando la regla 17 (saltoOpcional)]
    DO             reduce usando la regla 15 (saltoOpcional)
    DO             [reduce usando la regla 17 (saltoOpcional)]
    WHILE          reduce usando la regla 15 (saltoOpcional)
    WHILE          [reduce usando la regla 17 (saltoOpcional)]
    CHAR           reduce usando la regla 15 (saltoOpcional)
    CHAR           [reduce usando la regla 17 (saltoOpcional)]
    BREAK          reduce usando la regla 15 (saltoOpcional)
    BREAK          [reduce usando la regla 17 (saltoOpcional)]
    DEFAULT        reduce usando la regla 15 (saltoOpcional)
    DEFAULT        [reduce usando la regla 17 (saltoOpcional)]
    '\n'           [reduce usando la regla 15 (saltoOpcional)]
    '\n'           [reduce usando la regla 17 (saltoOpcional)]
    '{'            reduce usando la regla 15 (saltoOpcional)
    '{'            [reduce usando la regla 17 (saltoOpcional)]
    '}'            reduce usando la regla 15 (saltoOpcional)
    '}'            [reduce usando la regla 17 (saltoOpcional)]
    ';'            reduce usando la regla 15 (saltoOpcional)
    ';'            [reduce usando la regla 17 (saltoOpcional)]
    $default       reduce usando la regla 15 (saltoOpcional)

    saltoOpcional  ir al estado 52


estado 25

   14 line: error saltoOpcional .
   40 sentenciaIfElse: error saltoOpcional .
   60 sentenciaDeclaracion: error saltoOpcional .

    $end           reduce usando la regla 14 (line)
    $end           [reduce usando la regla 40 (sentenciaIfElse)]
    $end           [reduce usando la regla 60 (sentenciaDeclaracion)]
    error          reduce usando la regla 14 (line)
    error          [reduce usando la regla 40 (sentenciaIfElse)]
    error          [reduce usando la regla 60 (sentenciaDeclaracion)]
    FOR            reduce usando la regla 14 (line)
    FOR            [reduce usando la regla 40 (sentenciaIfElse)]
    FOR            [reduce usando la regla 60 (sentenciaDeclaracion)]
    IF             reduce usando la regla 14 (line)
    IF             [reduce usando la regla 40 (sentenciaIfElse)]
    IF             [reduce usando la regla 60 (sentenciaDeclaracion)]
    SWITCH         reduce usando la regla 14 (line)
    SWITCH         [reduce usando la regla 40 (sentenciaIfElse)]
    SWITCH         [reduce usando la regla 60 (sentenciaDeclaracion)]
    IDENTIFICADOR  reduce usando la regla 14 (line)
    IDENTIFICADOR  [reduce usando la regla 40 (sentenciaIfElse)]
    IDENTIFICADOR  [reduce usando la regla 60 (sentenciaDeclaracion)]
    TIPO_DATO      reduce usando la regla 14 (line)
    TIPO_DATO      [reduce usando la regla 40 (sentenciaIfElse)]
    TIPO_DATO      [reduce usando la regla 60 (sentenciaDeclaracion)]
    DO             reduce usando la regla 14 (line)
    DO             [reduce usando la regla 40 (sentenciaIfElse)]
    DO             [reduce usando la regla 60 (sentenciaDeclaracion)]
    WHILE          reduce usando la regla 14 (line)
    WHILE          [reduce usando la regla 40 (sentenciaIfElse)]
    WHILE          [reduce usando la regla 60 (sentenciaDeclaracion)]
    '\n'           reduce usando la regla 14 (line)
    '\n'           [reduce usando la regla 40 (sentenciaIfElse)]
    '\n'           [reduce usando la regla 60 (sentenciaDeclaracion)]
    ';'            reduce usando la regla 60 (sentenciaDeclaracion)
    $default       reduce usando la regla 14 (line)


estado 26

   31 sentenciaFor: FOR '(' . sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

    error          desplazar e ir al estado 53
    IDENTIFICADOR  desplazar e ir al estado 54
    TIPO_DATO      desplazar e ir al estado 55

    sentenciaDecOAsig     ir al estado 56
    sentenciaDeclaracion  ir al estado 57
    sentenciaAsignacion   ir al estado 58
    parametro             ir al estado 23


estado 27

   39 sentenciaIfElse: IF '(' . exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse

    DECIMAL         desplazar e ir al estado 59
    HEXA            desplazar e ir al estado 60
    OCTAL           desplazar e ir al estado 61
    NUM_R           desplazar e ir al estado 62
    IDENTIFICADOR   desplazar e ir al estado 63
    CHAR            desplazar e ir al estado 64
    LITERAL_CADENA  desplazar e ir al estado 65

    exp   ir al estado 66
    expC  ir al estado 67


estado 28

   45 sentenciaSwitch: SWITCH '(' . exp ')' saltoOpcional '{' sentenciaCase '}'

    DECIMAL         desplazar e ir al estado 59
    HEXA            desplazar e ir al estado 60
    OCTAL           desplazar e ir al estado 61
    NUM_R           desplazar e ir al estado 62
    IDENTIFICADOR   desplazar e ir al estado 63
    CHAR            desplazar e ir al estado 64
    LITERAL_CADENA  desplazar e ir al estado 65

    exp   ir al estado 68
    expC  ir al estado 67


estado 29

   36 incrementoDecremento: IDENTIFICADOR MAS_MAS . ';'

    ';'  desplazar e ir al estado 69


estado 30

   37 incrementoDecremento: IDENTIFICADOR MENOS_MENOS . ';'

    ';'  desplazar e ir al estado 70


estado 31

   18 definicionFuncion: TIPO_DATO IDENTIFICADOR . '(' listaParametros ')' saltoOpcional '{' listadoDeSentencias '}' ';'
   54 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR . ';'
   56                     | TIPO_DATO IDENTIFICADOR . '[' expC ']' ';'
   57                     | TIPO_DATO IDENTIFICADOR . '[' expC ']' '=' '{' auxi '}' ';'
   59                     | TIPO_DATO IDENTIFICADOR . '(' listaParametros ')' ';'
   68 parametro: TIPO_DATO IDENTIFICADOR .
   72 identificadorA: IDENTIFICADOR . ';'
   73               | IDENTIFICADOR . '=' exp ';'
   74               | IDENTIFICADOR . MAS_IGUAL exp ';'
   75               | IDENTIFICADOR . MENOS_IGUAL exp ';'
   76               | IDENTIFICADOR . POR_IGUAL exp ';'
   77               | IDENTIFICADOR . DIVIDIDO_IGUAL exp ';'

    MAS_IGUAL       desplazar e ir al estado 71
    MENOS_IGUAL     desplazar e ir al estado 72
    POR_IGUAL       desplazar e ir al estado 73
    DIVIDIDO_IGUAL  desplazar e ir al estado 74
    '('             desplazar e ir al estado 75
    ';'             desplazar e ir al estado 76
    '['             desplazar e ir al estado 77
    '='             desplazar e ir al estado 78

    MAS_IGUAL       [reduce usando la regla 68 (parametro)]
    MENOS_IGUAL     [reduce usando la regla 68 (parametro)]
    POR_IGUAL       [reduce usando la regla 68 (parametro)]
    DIVIDIDO_IGUAL  [reduce usando la regla 68 (parametro)]
    '='             [reduce usando la regla 68 (parametro)]


estado 32

   58 sentenciaDeclaracion: TIPO_DATO '*' . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 79


estado 33

   55 sentenciaDeclaracion: TIPO_DATO listaIdentificadores .
   71 listaIdentificadores: listaIdentificadores . ',' identificadorA

    ','  desplazar e ir al estado 80

    $default  reduce usando la regla 55 (sentenciaDeclaracion)


estado 34

   70 listaIdentificadores: identificadorA .

    $default  reduce usando la regla 70 (listaIdentificadores)


estado 35

   30 sentenciaDoWhile: DO '{' . listadoDeSentencias '}' WHILE '(' exp ')' ';'

    error          desplazar e ir al estado 81
    FOR            desplazar e ir al estado 4
    IF             desplazar e ir al estado 5
    RETURN         desplazar e ir al estado 82
    SWITCH         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 55
    DO             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    '\n'           desplazar e ir al estado 83
